--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,15 @@
 @import "tailwindcss";
 
 
+:root {
+    --orange-accent: #F77D36;
+}
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--font-montserrat-alternates);
 }
